# https---github.com-Mubashar-Bashir-Generative-AI

./: Fast Api with Poetry Steps.txt  README.md
Assignment_01/task_mgmnt_prj/task_mgmnt/: README.md  pyproject.toml
cloud_AI_OpenAI/: compose.yaml
cloud_AI_OpenAI/code/: Dockerfile.dev  class01.ipynb  pyproject.toml
gpt/: compose.yaml
gpt/code/: pyproject.toml
gpt/code/project01/01_hello_world/: hello_world.ipynb
mart/: api-services-hostfile  compose.yaml
mart/inventory-service-aimart/: .env  README.md
mart/inventory-service-aimart/app/: db_c_e_t_session.py  main.py  settings.py
mart/inventry-service-aimart/: Dockerfile.dev
mart/inventry-service-aimart/app/: main.py
mart/inventry-service-aimart_old/app/: main.py
mart/notification-service-aimart/: .env  .envbackup  Dockerfile.dev
mart/notification-service-aimart/app/: db_c_e_t_session.py  main.py  notification_settings.py
mart/order-service-aimart/: .env  Dockerfile.dev
mart/order-service-aimart/app/: db_c_e_t_session.py  main.py  model.py  order_settings.py
mart/payment-service-aimart/: .env  .env_backup  Dockerfile.dev  pyproject.toml
mart/payment-service-aimart/app/: db_c_e_t_session.py  main.py  payment_settings.py
mart/product-service-aimart/: .env  .env_backup  Dockerfile.dev  pyproject.toml
mart/product-service-aimart/app/: main.py  (+3 more)
mart/user-service-aimart/: .env  Dockerfile.dev
mart_old/: Readme.md  compose.yaml
mart_old/inventry-service-aimart/: .env  Dockerfile.dev
mart_old/product-service-aimart/: .env
uit-api-class/: pyproject.toml
uit-api-class/uitclass/: main.py
(+92 files in other folders)
