[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Mubashar-Bashir <mubasharbashir003@gmail.com>"]
readme = "README.md"
packages = [{include = "code"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
