[tool.poetry]
name = "project01"
version = "0.1.0"
description = ""
authors = ["Mubashar-Bashir <mubasharbashir003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.30.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
